# yadro-test-task

./: CMakeLists.txt  README.MD  aboba  bebra  config  main.cpp  normalSorted  out2t  t  t1  t2  testT  tmp
include/: config_reader.h  i_tape_device.h  tape_device_f.h  tape_sorter.h  test.h  util.h
src/: config_reader.cpp  tape_device_f.cpp  tape_sorter.cpp  test.cpp  util.cpp
